Add My Organizations Page

--- a/pages/index.html
+++ b/pages/index.html
@@ -15,7 +15,7 @@
                 <div class="left-signIn">
                     <h1 class="label-signIn"> Sign-in </h1>
                  
-                    <form action="" method="post"> 
+                    <form action="  " method="post"> 
                         <div class="form-signIn">
                             <label for="signin-schoolEmail"> <b>School Email</b> </label> <br>
                             <input type="text" id="signin-schoolEmail" name="signin-schoolEmail" class="form-control" placeholder="Enter your school email" required> <br>
@@ -29,7 +29,7 @@
                             <a href="#"> Forgot password? </a> <br>
                         </div>
 
-                        <button class="btn btn-signIn" id="btn-signIn" type="submit"> <a href="./myorganizations.html"> Sign-in</a> </button>
+                        <button class="btn btn-signIn" id="btn-signIn" type="submit">  Sign-in </button>
                     </form>
                 </div>
                 <div class="right-signIn"> 
