--- a/pages/myorganizations.html
+++ b/pages/myorganizations.html
@@ -54,6 +54,10 @@
                 </div>
 
                 <i class="fa-solid fa-ellipsis fa-lg"></i>
+
+                <a href="" style="color: black;"><ul class="ellipsis-extended"> <i class="fa-solid fa-user-plus" style="margin-right: 8px;"></i> <b>Give Access</b> </ul></a>
+              
+
               </div>
             </div>
           </div>
@@ -66,7 +70,7 @@
     </footer>
 
 
-    <script src=""> </script>
+    <script src="../scripts/myorganizations.js"> </script>
     <script src="https://kit.fontawesome.com/93f7822319.js" crossorigin="anonymous"></script>
 </body>
 </html>
