--- a/pages/index.html
+++ b/pages/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title> SAO Management Portal</title>
-    <link rel="stylesheet" href="../styles/02-layout/index.css">
+    <link rel="stylesheet" href="../styles/02-layout/css/index.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
 <body>    
@@ -96,6 +96,6 @@
     </main>
 
 
-    <script src="../scripts/landing.js"> </script>
+    <script src="../scripts/02-pages/landing.js"> </script>
 </body>
 </html>
